--- a/.github/workflows/autosync_telephony.yml
+++ b/.github/workflows/autosync_telephony.yml
@@ -66,7 +66,7 @@ jobs:
     - name: 克隆源码
       run: |
         git clone $REPO_URL -b $REPO_BRANCH telephony
-        cd routing
+        cd telephony
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.git' | xargs rm -rf
