--- a/.github/workflows/autosync_packages.yml
+++ b/.github/workflows/autosync_packages.yml
@@ -70,6 +70,7 @@ jobs:
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.git' | xargs rm -rf
+        cp -rf /home/runner/work/AutoSync/AutoSync/server/packages/LICENSE .
         
     # 加载自定义脚本  
     - name: 加载自定义脚本
