--- a/.github/workflows/autosync_packages.yml
+++ b/.github/workflows/autosync_packages.yml
@@ -21,9 +21,9 @@ on:
 # 环境变量
 env:
    # 源码仓库地址
-   REPO_URL: https://github.com/coolsnowwolf/packages
+   REPO_URL: https://github.com/project-openwrt/packages
    # 源码分支
-   REPO_BRANCH: master
+   REPO_BRANCH: openwrt-18.06
    # 时区设置
    TZ: Asia/Shanghai
    # 上传分支
