--- a/.github/workflows/autosync_uola.yml
+++ b/.github/workflows/autosync_uola.yml
@@ -6,7 +6,7 @@
 # Blog: https://www.danxiaonuo.com
 #=================================================
 
-name: 自动同步uola源码包
+name: 自动同步Uola源码包
 
 # 设置触发条件
 on:
