--- a/server/smartdns_config/files/smartdns.conf
+++ b/server/smartdns_config/files/smartdns.conf
@@ -31,7 +31,27 @@ config smartdns
 config server
 	option enabled '1'
 	option name 'rubyfish DNS'
-	option ip 'ea-dns.rubyfish.cn'
+	option ip '13800000000.rubyfish.cn'
+	option port '853'
+	option type 'tls'
+	option server_group 'cn'
+	option blacklist_ip '0'
+	
+
+config server
+	option enabled '1'
+	option name '360 DNS'
+	option ip 'dot.360.cn'
+	option port '853'
+	option type 'tls'
+	option server_group 'cn'
+	option blacklist_ip '0'
+	
+
+config server
+	option enabled '1'
+	option name 'ALY DNS'
+	option ip 'dns.alidns.com'
 	option port '853'
 	option type 'tls'
 	option server_group 'cn'
