--- a/server/smartdns_config/files/smartdns.conf
+++ b/server/smartdns_config/files/smartdns.conf
@@ -17,7 +17,7 @@ config smartdns
         option seconddns_no_rule_soa '0'
         option force_aaaa_soa '0'
         option coredump '0'
-        option seconddns_server_group 'global'
+        option seconddns_server_group 'us'
         option seconddns_no_speed_check '1'
         option seconddns_no_dualstack_selection '1'
         option seconddns_no_cache '1'
@@ -144,7 +144,7 @@ config server
 	option ip 'uw-dns.rubyfish.cn'
 	option port '853'
 	option type 'tls'
-	option server_group 'global'
+	option server_group 'us'
 	option blacklist_ip '0'
 
 config server
@@ -153,7 +153,7 @@ config server
 	option ip 'dns.google'
 	option port '853'
 	option type 'tls'
-	option server_group 'global'
+	option server_group 'us'
 	option blacklist_ip '0'
 
 config server
@@ -162,7 +162,7 @@ config server
 	option ip '1dot1dot1dot1.cloudflare-dns.com'
 	option port '853'
 	option type 'tls'
-	option server_group 'global'
+	option server_group 'us'
 	option blacklist_ip '0'
 
 config server
@@ -170,7 +170,7 @@ config server
 	option name 'GoogleDNS'
 	option ip 'dns.google/dns-query'
 	option type 'https'
-	option server_group 'global'
+	option server_group 'us'
 	option blacklist_ip '0'
 	option port '443'
 
@@ -179,7 +179,7 @@ config server
 	option name 'CloudflareDNS'
 	option ip 'cloudflare-dns.com/dns-query'
 	option type 'https'
-	option server_group 'global'
+	option server_group 'us'
 	option blacklist_ip '0'
 	option port '443'
 
@@ -189,7 +189,7 @@ config server
 	option name 'GoogleDNS IPV6'
 	option ip '2001:4860:4860::8888'
 	option port '53'
-	option server_group 'global'
+	option server_group 'us'
 	option blacklist_ip '0'
 	
 config server
@@ -198,5 +198,5 @@ config server
 	option name 'Cloudflare IPV6'
 	option ip '2606:4700:4700::1111'
 	option port '53'
-	option server_group 'global'
+	option server_group 'us'
 	option blacklist_ip '0'
