--- a/.github/workflows/anycastip.yml
+++ b/.github/workflows/anycastip.yml
@@ -54,13 +54,16 @@ jobs:
     # 下载anycastip
     - name: 下载anycastip
       run: |
-        curl -fsSL https://anycast.freecdn.workers.dev > anycastip.txt
+        mkdir -pv anycastip
+        curl -fsSL https://anycast.freecdn.workers.dev > anycastip/anycastip.txt
+        chmod 775 anycastip
         
     # 上传到分支
     - name: 上传到分支
       env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       run: |
+          cd anycastip
           git init
           git config user.name $GITHUB_USER_NAME
           git config user.email $GITHUB_USER_EMAIL
