--- a/server/smartdns_config/files/smartdns.conf
+++ b/server/smartdns_config/files/smartdns.conf
@@ -129,10 +129,10 @@ config server
 
 config server
 	option enabled '1'
-	option type 'udp'
-	option name 'CFIECDNS IPV6'
-	option ip '240C::6666'
-	option port '53'
+	option name 'DoT IPV6'
+	option ip 'dns.cfiec.net'
+	option port '853'
+	option type 'tls'
 	option server_group 'cn'
 	option blacklist_ip '0'
 
