--- a/server/smartdns_config/files/smartdns.conf
+++ b/server/smartdns_config/files/smartdns.conf
@@ -127,12 +127,12 @@ config server
 	option server_group 'cn'
 	option blacklist_ip '0'
 
-config server
+config server	config server
 	option enabled '1'
-	option name 'DoT IPV6'
-	option ip 'dns.cfiec.net'
-	option port '853'
-	option type 'tls'
+	option type 'udp'
+	option name 'CFIECDNS IPV6'
+	option ip '240C::6666'
+	option port '53'
 	option server_group 'cn'
 	option blacklist_ip '0'
 
