--- a/server/smartdns_config/files/smartdns.conf
+++ b/server/smartdns_config/files/smartdns.conf
@@ -127,7 +127,7 @@ config server
 	option server_group 'cn'
 	option blacklist_ip '0'
 
-config server	config server
+config server
 	option enabled '1'
 	option type 'udp'
 	option name 'CFIECDNS IPV6'
