--- a/server/smartdns_config/files/smartdns.conf
+++ b/server/smartdns_config/files/smartdns.conf
@@ -16,185 +16,195 @@ config smartdns
 	option seconddns_no_rule_soa '0'
 	option force_aaaa_soa '0'
 	option coredump '0'
-	option seconddns_server_group 'us'
 	option seconddns_no_cache '1'
-	option enabled '1'
-	option seconddns_enabled '1'
 	option serve_expired '1'
 	option dualstack_ip_selection '1'
 	option seconddns_no_dualstack_selection '0'
 	option seconddns_no_speed_check '0'
+	option enabled '1'
+	option seconddns_enabled '1'
+	option seconddns_server_group 'global'
 	list old_redirect 'none'
 	list old_port '6053'
 	list old_enabled '1'
 
 config server
-	option enabled '1'
-	option name 'rubyfish DNS'
-	option ip '13800000000.rubyfish.cn'
-	option port '853'
-	option type 'tls'
-	option server_group 'cn'
+	option type 'udp'
+	option name 'Ali ipv4'
+	option ip '223.5.5.5'
+	option port '53'
+	option server_group 'home'
 	option blacklist_ip '0'
+	option enabled '1'
 
 config server
-	option enabled '1'
-	option name '360 DNS'
-	option ip 'dot.360.cn'
-	option port '853'
-	option type 'tls'
-	option server_group 'cn'
+	option name 'Ali https'
+	option type 'https'
+	option no_check_certificate '0'
 	option blacklist_ip '0'
+	option addition_arg 'nameserver /dns.alidns.com/[home]'
+	option server_group 'cn'
+	option port '443'
+	option ip 'dns.alidns.com/dns-query'
+	option enabled '1'
 
 config server
-	option enabled '1'
-	option name 'ALY DNS'
+	option name 'Ali tls'
 	option ip 'dns.alidns.com'
 	option port '853'
 	option type 'tls'
-	option server_group 'cn'
+	option no_check_certificate '0'
 	option blacklist_ip '0'
+	option addition_arg 'nameserver /dns.alidns.com/[home]'
+	option server_group 'cn'
+	option enabled '1'
 
 config server
-	option enabled '1'
 	option type 'udp'
-	option name '114DNS'
-	option ip '114.114.114.114'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'DNSPod'
-	option ip '119.29.29.29'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'AliDNS'
-	option ip '223.5.5.5'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'BaiduDNS'
-	option ip '180.76.76.76'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'oneDNS'
-	option ip '117.50.11.11'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'CNNIC sDNS'
-	option ip '1.2.4.8'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'AliDNS IPV6'
+	option name 'Ali ipv6'
 	option ip '2400:3200::1'
 	option port '53'
 	option server_group 'cn'
 	option blacklist_ip '0'
+	option enabled '1'
 
 config server
-	option enabled '1'
-	option type 'udp'
-	option name 'BaiduDNS IPV6'
-	option ip '2400:da00::6666'
-	option port '53'
+	option name 'CFIEC https'
+	option type 'https'
+	option no_check_certificate '0'
 	option server_group 'cn'
 	option blacklist_ip '0'
+	option addition_arg 'nameserver /dns.cfiec.net/[home]'
+	option port '443'
+	option ip 'dns.cfiec.net/dns-query'
+	option enabled '1'
 
 config server
+	option name 'CFIEC tls'
+	option ip 'dns.cfiec.net'
+	option port '853'
+	option type 'tls'
+	option no_check_certificate '0'
+	option blacklist_ip '0'
+	option server_group 'cn'
+	option addition_arg 'nameserver /dns.alidns.com/[home]'
 	option enabled '1'
+
+config server
 	option type 'udp'
-	option name 'CFIECDNS IPV6'
+	option name 'CFIEC ipv6'
 	option ip '240C::6666'
 	option port '53'
 	option server_group 'cn'
 	option blacklist_ip '0'
+	option enabled '1'
 
 config server
+	option type 'udp'
+	option name '360 ipv4'
+	option ip '101.226.4.6'
+	option port '53'
+	option server_group 'home'
+	option blacklist_ip '0'
 	option enabled '1'
-	option name 'rubyfish DNS'
-	option ip 'uw-dns.rubyfish.cn'
+
+config server
+	option name '360 https'
+	option ip 'doh.360.cn/dns-query'
+	option port '443'
+	option type 'tls'
+	option no_check_certificate '0'
+	option server_group 'cn'
+	option blacklist_ip '0'
+	option addition_arg 'nameserver /doh.360.cn/[home]'
+	option enabled '1'
+
+config server
+	option name '360 tls'
+	option ip 'dot.360.cn'
 	option port '853'
 	option type 'tls'
-	option server_group 'us'
+	option no_check_certificate '0'
+	option server_group 'cn'
 	option blacklist_ip '0'
+	option addition_arg 'nameserver /dot.360.cn/[home]'
+	option enabled '1'
 
 config server
+	option type 'udp'
+	option name 'Google ipv4'
+	option ip '8.8.8.8'
+	option port '53'
+	option server_group 'foreign'
+	option blacklist_ip '0'
 	option enabled '1'
-	option name 'GoogleDNS'
+
+config server
+	option name 'Google https'
+	option type 'https'
+	option no_check_certificate '0'
+	option server_group 'global'
+	option blacklist_ip '0'
+	option addition_arg 'nameserver /dns.google/[foreign]'
+	option port '443'
+	option ip 'dns.google/dns-query'
+	option enabled '1'
+
+config server
+	option name 'Google tls'
 	option ip 'dns.google'
 	option port '853'
 	option type 'tls'
-	option server_group 'us'
+	option no_check_certificate '0'
+	option server_group 'global'
 	option blacklist_ip '0'
+	option addition_arg 'nameserver /dns.google/[foreign]'
+	option enabled '1'
 
 config server
-	option enabled '1'
-	option name 'CloudflareDNS'
-	option ip '1dot1dot1dot1.cloudflare-dns.com'
-	option port '853'
-	option type 'tls'
-	option server_group 'us'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option name 'GoogleDNS'
-	option ip 'dns.google/dns-query'
-	option type 'https'
-	option server_group 'us'
-	option blacklist_ip '0'
-	option port '443'
-
-config server
-	option enabled '1'
-	option name 'CloudflareDNS'
-	option ip 'cloudflare-dns.com/dns-query'
-	option type 'https'
-	option server_group 'us'
-	option blacklist_ip '0'
-	option port '443'
-
-config server
-	option enabled '1'
 	option type 'udp'
-	option name 'GoogleDNS IPV6'
+	option name 'Google ipv6'
 	option ip '2001:4860:4860::8888'
 	option port '53'
-	option server_group 'us'
+	option server_group 'global'
 	option blacklist_ip '0'
+	option enabled '1'
+
+config server
+	option type 'udp'
+	option name 'Cloudflare ipv4'
+	option port '53'
+	option blacklist_ip '0'
+	option server_group 'foreign'
+	option ip '1.1.1.1'
+	option enabled '1'
+
+config server
+	option name 'Cloudflare https'
+	option ip 'dns.cloudflare.com/dns-query'
+	option type 'https'
+	option no_check_certificate '0'
+	option server_group 'global'
+	option blacklist_ip '0'
+	option addition_arg 'nameserver /dns.cloudflare.com/[foreign]'
+	option port '443'
+	option enabled '1'
+
+config server
+	option name 'Cloudflare tls'
+	option port '853'
+	option type 'tls'
+	option no_check_certificate '0'
+	option server_group 'global'
+	option blacklist_ip '0'
+	option enabled '1'
+	option ip '1.1.1.1'
 
 config server
 	option enabled '1'
 	option type 'udp'
-	option name 'Cloudflare IPV6'
+	option name 'Cloudflare ipv6'
 	option ip '2606:4700:4700::1111'
 	option port '53'
-	option server_group 'us'
+	option server_group 'global'
 	option blacklist_ip '0'
