--- a/server/smartdns_config/files/smartdns.conf
+++ b/server/smartdns_config/files/smartdns.conf
@@ -112,12 +112,12 @@ config server
 	option name '360 https'
 	option ip 'doh.360.cn/dns-query'
 	option port '443'
-	option type 'tls'
 	option no_check_certificate '0'
 	option server_group 'cn'
 	option blacklist_ip '0'
 	option addition_arg 'nameserver /doh.360.cn/[home]'
 	option enabled '1'
+	option type 'https'
 
 config server
 	option name '360 tls'
